create of html page

--- a/file.html
+++ b/file.html
@@ -1,9 +1,13 @@
 <html>
-<body>
-hello
-</body>
-<hr>
+ <body>
+  <center>
+    <hr />
+    <h1>"Hello World"</h1>
+    <br />
+    <h3>by</h3>
+    <br />
+    <h2>Gautam khatri</h2>
+    <hr size="3" />
+    </center>
+  </body>
 </html>
-hii
-
-d
